# sauronlab

./: .pre-commit-config.yaml  .scrutinizer.yml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  codemeta.json  environment.yml  pyproject.toml  sauronlab-env.yml  tox.ini
.github/: settings.yml
.github/workflows/: publish.yml  push-main.yml
docs/: index.rst
integration/: README.md  __init__.py  connection.json  testdb-schema.sql
integration/micro/: sauronlab.toml  test_micro.py  testdb-rows.sql
sauronlab/: __init__.py  cli.py  jupyter.py  quick.py  startup.py
sauronlab/analysis/: __init__.py  layouts.py
sauronlab/caches/: assay_caches.py  audio_caches.py  caching_wfs.py  sensor_caches.py  stim_caches.py  video_caches.py  wf_caches.py
sauronlab/calc/: feature_interpolation.py  waveform_embedding.py
sauronlab/core/: __init__.py  _imports.py  _tools.py  core_imports.py  data_generations.py  environment.py  queries.py  tools.py  valar_singleton.py  valar_tools.py
sauronlab/extras/: addon_tools.py  auto_analyses.py  datasets.py  mandos_searches.py  phenosearches.py  video_caches.py  video_core.py  videos.py
sauronlab/lookups/: __init__.py  fuzzy.py  lookups.py
sauronlab/ml/: __init__.py  accuracy_frames.py  classifiers.py  confusion_matrices.py  decision_frames.py  multi_trainers.py  spindles.py  transformers.py
sauronlab/model/: app_frames.py  assay_frames.py  audio.py  cache_interfaces.py  case_control_comparisons.py  compound_names.py  concern_rules.py  concerns.py  features.py  metrics.py  plate_frames.py  responses.py  roi_tools.py  sensor_names.py  sensors.py  stim_frames.py  treatment_names.py  treatments.py  videos.py  well_frames.py  well_names.py  wf_builders.py  wf_tools.py
sauronlab/resources/: example.chemfish.config  jupyter_template.txt
sauronlab/resources/chem/: unimportant_substrings.lines
sauronlab/resources/core/: generations.json  videos.json
sauronlab/resources/styles/: default.mplstyle  default.properties
sauronlab/resources/templates/: jupyter_template.txt  sauronlab.config
sauronlab/viz/: __init__.py  _kvrc_utils.py  accuracy_plots.py  confusion_plots.py  figures.py  heatmaps.py  importance_plots.py  kvrc.py  sensor_plots.py  stim_plots.py  timeline_plots.py  trace_plots.py  well_plots.py
tests/: __init__.py  test_cli.py
tests/core/: test_internal_utils.py
